Add script to run test server

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./src/index.js",
     "error": "TEST_ERROR=true node ./src/index.js",
     "reset": "psql -U development -d scheduler_development < ./src/db/schema/create.sql && psql -U development -d scheduler_development < ./src/db/schema/development.sql",
-    "test": "NODE_ENV=test npm start"
+    "test": "NODE_ENV=test npm start",
+    "test:server": "NODE_ENV=test npm start"
   },
   "author": "",
   "license": "ISC",
